# RetroMessenger

./: .gitignore  CMakeLists.txt  README.md  build-appimage.sh  compression.cpp  compression.h  crypto_utils.cpp  crypto_utils.h  gui.cpp  gui.h  main.cpp  main_new.cpp  messenger.sh  protocol.cpp  protocol.h  retromessenger.desktop  run_messenger.sh  run_server.sh  server.cpp  tans_compression.cpp  tans_compression.h
.cache/clangd/index/: main.cpp.7D64C9E3BCAEB4F0.idx  server.cpp.F304FFC00E3966E9.idx
